# awns-rpi5

./: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  install-concorde.sh  install-googleortools.sh  install-gpsd.sh  install-tools.sh  install.sh  rebuild.sh
app/: CMakeLists.txt  concorde.cpp  concorde.hpp  gps.cpp  gps.hpp  logger.hpp  main.cpp  navigator.cpp  navigator.hpp
app/python/: visualize.py
artifacts/: Autonomous Waypoint Navigation System Test Report.docx
scripts/: concorde-debian.sh  concorde-macos-arm.sh  dev.sh  install.sh  python-plot.sh  test.sh
tests/csv/: 10_allaround.csv  10_clusters.csv  10_line.csv  10_oneside.csv  10_spiral.csv  15_allaround.csv  15_clusters.csv  15_line.csv  15_oneside.csv  15_spiral.csv  30_allaround.csv  30_clusters.csv  30_line.csv  30_oneside.csv  50_allaround.csv  50_clusters.csv  50_line.csv  50_oneside.csv  50_spiral.csv  5_allaround.csv  5_clusters.csv  5_line.csv  5_oneside.csv  5_spiral.csv  t0.csv  t1.csv
tests/csv/test_files_6dec/: 15_allaround.csv  15_clusters.csv  15_line.csv  15_oneside.csv  30_allaround.csv  30_clusters.csv  30_line.csv  30_oneside.csv  30_spiral.csv  50_allaround.csv  50_clusters.csv  50_line.csv  50_oneside.csv  5_allaround.csv  5_clusters.csv  5_line.csv  5_oneside.csv
tests/tsp/: t0.tsp  t1.tsp
